feat: tool calling db and vector db